--- a/style.css
+++ b/style.css
@@ -287,3 +287,9 @@ header nav .dropdown-toggle {
   font-weight: 600;
 }
 
+.contratar-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
